--- a/src/documents/styles/components/article.less
+++ b/src/documents/styles/components/article.less
@@ -12,7 +12,7 @@
 
   h1 {
     visibility:hidden;
-    display: none;
+    position:absolute;
   }
   h2 {
     font-family: 'Open Sans', sans-serif;
@@ -71,7 +71,7 @@
 
   code {
     background-color:#FFFFFF;
-    color: #3Fa9F5
+    color: #0F7C38;
   }
 
 }
@@ -110,5 +110,3 @@
   background: #FFDFA3 url('/img/Error.png') 25px center no-repeat;
 
 }
-
-
